:lipstick: fix:footer z-index

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -13,4 +13,5 @@ footer {
 
   position: fixed;
   bottom: 0;
+  z-index: 2;
 }
